--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@ h4
    background-color: rgb(0, 4, 255);
    color:rgb(255, 255, 255);
    line-height: 2;
+   position: fixed;
+   bottom: 0;
+   width: 100%;
 }
 canvas 
   {
